--- a/Codigo/Projeto/pages/login.html
+++ b/Codigo/Projeto/pages/login.html
@@ -13,10 +13,11 @@
         <form>
             <div class="form-card">
                 <img src="imagens/logo.png" alt="Logo do Livros Viajantes">
-                <h1>Livros Viajantes</h1>
-                <input name="email" type="email" placeholder="Email" />
-                <input name="password" type="password" placeholder="Senha" />
-                <button type="submit">Login</button>
+                <label for="emailLogin">E-mail:</label>
+                <input type="email" id="emailLogin" name="emailLogin" required><br><br>
+                <label for="senhaLogin">Senha:</label>
+                <input type="password" id="senhaLogin" name="senhaLogin" required><br><br>
+                <button id="btnLogin" type="submit">Login</button>
                 <div class="signup-container">
                     <a href="CadastroUsuarios.html">Cadastrar novo usuário</a>
                 </div>
