--- a/Codigo/Projeto/pages/meus-livros.html
+++ b/Codigo/Projeto/pages/meus-livros.html
@@ -18,7 +18,8 @@
                     <a href="emAlta.html"><button>Em Alta</button></a>
                     <a href="historico.html"><button>Histórico de Troca</button></a>
                     <a href="cadastrar-livro.html"><button>Cadastrar Livro</button></a>
-                    <a href="postagem-livros.html" class="header-button">Postagem de Livros</a>
+                    <a href="postagem-livros.html"><button>Livros</button></a>
+                    <button id="logout-btn">Sair</button>
                     
                    
             </nav>
