Update tela inicio

--- a/Codigo/Projeto/pages/postagem-livros.html
+++ b/Codigo/Projeto/pages/postagem-livros.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="header-content">
             <div class="logo-container">
-                <img src="img/LivrosViajantes.jfif" alt="Logo" class="logo"> <!-- Aqui exibo a logo do site -->
+                <a href="inicio.html"><img src="img/logo.png" alt="logo" class="logo"></a>
             </div>
             <nav class="header-nav">
                 <a href="login.html" class="header-button">Login</a>
