--- a/Codigo/Projeto/pages/emAlta.html
+++ b/Codigo/Projeto/pages/emAlta.html
@@ -10,7 +10,7 @@
     <header class="header">
         <div class="header-content">
             <div class="logo-container">
-                <a href="postagem-livros.html"><img src="img/logo.png" alt="Logo" class="logo"></a>
+                <a href="inicio.html"><img src="img/logo.png" alt="logo" class="logo"></a>
             </div>
             <nav class="header-nav">
                 <a href="meus-livros.html" class="header-button">Meus Livros</a>
