--- a/Codigo/Projeto/pages/historico.html
+++ b/Codigo/Projeto/pages/historico.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="header-content">
             <div class="logo-container">
-                <img src="imagens/logo.png" alt="LogoProjeto" class="logo">
+                <a href="inicio.html"><img src="img/logo.png" alt="logo" class="logo"></a>
             </div>
             <nav class="header-nav">
                 <a href="meus-livros.html" class="header-button">Meus Livros</a>
