--- a/Codigo/Projeto/pages/meus-livros.html
+++ b/Codigo/Projeto/pages/meus-livros.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="header-content">
             <div class="logo-container">
-                <a href="postagem-livros.html"><img src="img/logo.png" alt="logo" class="logo"></a>
+                <a href="inicio.html"><img src="img/logo.png" alt="logo" class="logo"></a>
             </div>
             <!-- Botões de navegação -->
             <nav>
