Update tela inicio

--- a/Codigo/Projeto/pages/inicio.html
+++ b/Codigo/Projeto/pages/inicio.html
@@ -28,7 +28,7 @@
 
     <!-- Banner -->
     <section id="banner">
-        <h1>Seu próximo livro está a apenas uma troca de distância!</h1>
+        <h1>Seu próximo livro está apenas uma troca de distância!</h1>
         <p>Com o Livros Viajantes, cada livro ganha novos destinos. Participe dessa jornada literária global.</p>
     </section>
 
