--- a/Codigo/Projeto/pages/CadastroUsuarios.html
+++ b/Codigo/Projeto/pages/CadastroUsuarios.html
@@ -1,95 +1,109 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Livros Viajantes - Cadastro de Usuários</title>
     <link rel="stylesheet" href="../style/StyleCadastroUsuarios.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <title>Cadastro de Usuário</title>
 </head>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <div class="form-container">
-                <img src="imagens/logo.png" alt="Logo do Livros Viajantes">
-                <h3>Cadastro de Usuários</h3>
-                <form id="insert_user_form" method="POST">
-                    <div class="form-group">
-                        <div class="form-group">
-                            <img type="png" class="form-control" id="foto" name="foto">
-                        </div>
-                        <label for="nome">Nome Completo</label>
-                        <input type="text" class="form-control" id="nome" name="nome">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="email">E-mail</label>
-                        <input type="email" class="form-control" id="email" name="email">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="senha">Senha</label>
-                        <input type="password" class="form-control" id="senha" name="senha">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="confirmar-senha">Confirmar Senha</label>
-                        <input type="password" class="form-control" id="confirmar-senha" name="confirmar-senha">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="data-nascimento">Data de Nascimento</label>
-                        <input type="date" class="form-control" id="data-nascimento" name="data-nascimento">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="telefone">Telefone</label>
-                        <input type="tel" class="form-control" id="telefone" name="telefone">
-                    </div>
-
-                    <div class="form-group">
-                        <h4>Endereço</h4>
-                        <label for="rua">Rua</label>
-                        <input type="text" class="form-control" id="rua" name="rua" placeholder="Ex:Rua">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="numero">Número</label>
-                        <input type="number" class="form-control" id="numero" name="numero" placeholder="Ex:123">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="cidade">Cidade</label>
-                        <input type="text" class="form-control" id="cidade" name="cidade"
-                            placeholder="Ex:Florianópolis">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="estado">Estado</label>
-                        <input type="text" class="form-control" id="estado" name="estado" placeholder="Ex:SC">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="cep">CEP</label>
-                        <input type="text" class="form-control" id="cep" name="cep" placeholder="Ex:88010-000">
-                    </div>
-
-
-                    <div>
-                        <button id="btnCadastrarUsuario" type="submit">
-                            Cadastrar Usuário
-                        </button>
-                    </div>
-                </form>
+<body>
+    <header class="header">
+        <div class="header-content">
+            <div class="logo-container">
+                <img src="imagens/logo.png" alt="Logo">
             </div>
+            <nav class="header-nav">
+                <a href="#" class="header-button">Início</a>
+                <a href="#" class="header-button">Sobre</a>
+                <a href="#" class="header-button">Contato</a>
+            </nav>
         </div>
-        <div class="col-md-2"></div>
-    </div>
-</div>
+    </header>
 
-<script src="../js/CadastroUsuarios.js"></script>
+    <main>
+        <h1>Cadastro de Usuário</h1>
+        <div class="form-container">
+            <form id="cadastroUsuario" method="post">
+                <div class="form-group input-icon">
+                    <label for="nome">Nome Completo</label>
+                    <span class="icon">&#128100;</span>
+                    <input type="text" id="nome" name="nome" placeholder="Digite seu nome completo" required>
+                </div>
+                <div class="form-group input-icon">
+                    <label for="email">E-mail</label>
+                    <span class="icon">&#9993;</span>
+                    <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required>
+                </div>
+                <div class="form-group input-icon">
+                    <label for="senha">Senha</label>
+                    <span class="icon">&#128274;</span>
+                    <input type="password" id="senha" name="senha" placeholder="Digite sua senha" required>
+                </div>
+                <div class="form-group input-icon">
+                    <label for="telefone">Telefone</label>
+                    <span class="icon">&#128222;</span>
+                    <input type="tel" id="telefone" name="telefone" placeholder="(00) 00000-0000" required>
+                </div>
+                <div class="form-group input-icon">
+                    <label for="endereco">Endereço</label>
+                    <span class="icon">&#127968;</span>
+                    <input type="text" id="endereco" name="endereco" placeholder="Rua, Número" required>
+                </div>
+                <div class="form-group input-icon">
+                    <label for="cidade">Cidade</label>
+                    <span class="icon">&#127965;</span>
+                    <input type="text" id="cidade" name="cidade" placeholder="Digite sua cidade" required>
+                </div>
+                <div class="form-group input-icon">
+                    <label for="estado">Estado</label>
+                    <span class="icon">&#127968;</span>
+                    <select id="estado" name="estado" required>
+                        <option value="" disabled selected>Selecione o estado</option>
+                        <option value="AC">Acre</option>
+                        <option value="AL">Alagoas</option>
+                        <option value="AP">Amapá</option>
+                        <option value="AM">Amazonas</option>
+                        <option value="BA">Bahia</option>
+                        <option value="CE">Ceará</option>
+                        <option value="DF">Distrito Federal</option>
+                        <option value="ES">Espírito Santo</option>
+                        <option value="GO">Goiás</option>
+                        <option value="MA">Maranhão</option>
+                        <option value="MT">Mato Grosso</option>
+                        <option value="MS">Mato Grosso do Sul</option>
+                        <option value="MG">Minas Gerais</option>
+                        <option value="PA">Pará</option>
+                        <option value="PB">Paraíba</option>
+                        <option value="PR">Paraná</option>
+                        <option value="PE">Pernambuco</option>
+                        <option value="PI">Piauí</option>
+                        <option value="RJ">Rio de Janeiro</option>
+                        <option value="RN">Rio Grande do Norte</option>
+                        <option value="RS">Rio Grande do Sul</option>
+                        <option value="RO">Rondônia</option>
+                        <option value="RR">Roraima</option>
+                        <option value="SC">Santa Catarina</option>
+                        <option value="SP">São Paulo</option>
+                        <option value="SE">Sergipe</option>
+                        <option value="TO">Tocantins</option>
+                    </select>
+                </div>
+                <div class="form-group input-icon">
+                    <label for="cep">CEP</label>
+                    <span class="icon">&#128205;</span>
+                    <input type="text" id="cep" name="cep" placeholder="00000-000" required>
+                </div>
+                <button type="submit" class="submit-button">Cadastrar Usuário</button>
+            </form>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <p>&copy; 2024 Livros Viajantes. Todos os direitos reservados.</p>
+    </footer>
 </body>
 
 </html>
