--- a/Codigo/Projeto/pages/comofunciona.html
+++ b/Codigo/Projeto/pages/comofunciona.html
@@ -1,30 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Como Funciona | Livros Viajantes</title>
-    <link rel="stylesheet" href="../style/style-como-funciona.css"> 
+    <link rel="stylesheet" href="../style/style-como-funciona.css">
 </head>
+
 <body>
 
     <!-- Cabeçalho -->
     <header>
-        <div class="logo-container">
-            <a href="inicio.html"><img src="img/logo.png" alt="logo" class="logo"></a>
+        <div class="header-container">
+            <div class="logo-container">
+                <a href="inicio.html"><img src="img/logo1-removebg-preview.png" alt="logo" class="logo"></a>
+            </div>
+            <h1 class="header-title">Como Funciona</h1>
+            <p>Descubra como você pode trocar seus livros favoritos e viajar pelo mundo literário.</p>
         </div>
-        <h1>Como Funciona</h1>
-        <p>Descubra como você pode trocar seus livros favoritos e viajar pelo mundo literário.</p>
-    </header>
 
-    <!-- Menu de navegação -->
-    <nav>
-        <a href="inicio.html">Início</a>
-        <a href="login.html" class="header-button">Login</a>
-        <a href="CadastroUsuarios.html" class="header-button">Cadastrar</a>
-        <a href="postagem-livros.html" class="header-button">Catálogo de Livros</a>
-        <a href="login.html" class="header-button">Troque Agora</a>
-    </nav>
+        <!-- Menu de navegação -->
+        <nav>
+            <ul>
+                <li><a href="inicio.html" class="header-button">Início</a></li>
+                <li><a href="./login.html" class="header-button">Login</a></li> <!-- Ajuste conforme necessário -->
+                <li><a href="CadastroUsuarios.html" class="header-button">Cadastrar</a></li>
+                <li><a href="postagem-livros.html" class="header-button">Catálogo de Livros</a></li>
+                <li><a href="login.html" class="header-button">Troque Agora</a></li>
+            </ul>
+        </nav>
+
+    </header>
 
     <!-- Seção de Explicação -->
     <section class="container">
@@ -52,8 +60,6 @@
                 <p>Quando o outro usuário aceitar a troca, ambos recebem os detalhes de envio. Envie o livro e receba o seu novo título!</p>
             </div>
         </div>
-
-       
     </section>
 
     <!-- Rodapé -->
@@ -63,4 +69,5 @@
     </footer>
 
 </body>
+
 </html>
