--- a/Codigo/Projeto/pages/emAlta.html
+++ b/Codigo/Projeto/pages/emAlta.html
@@ -1,54 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style/emAlta.css">
     <title>BESTSELLERS</title>
 </head>
+
 <body>
     <header class="header">
         <div class="header-content">
             <div class="logo-container">
-                <a href="inicio.html"><img src="img/logo.png" alt="logo" class="logo"></a>
+                <a href="inicio.html"><img src="img/logo1-removebg-preview.png" alt="logo" class="logo"></a>
             </div>
             <nav class="header-nav">
                 <a href="meus-livros.html" class="header-button">Meus Livros</a>
                 <a href="postagem-livros.html" class="header-button">Postagem de Livros</a>
                 <a href="cadastrar-livro.html" class="header-button">Cadastrar Livro</a>
                 <a href="historico.html" class="header-button">Histórico de Troca</a>
-           
             </nav>
         </div>
     </header>
 
-    <h1>BESTSELLERS</h1>
+    <main>
+        <h1>BESTSELLERS</h1>
 
-    <!-- Filtro de gêneros -->
-    <select id="genre-filter">
-        <option value="all">Todos</option>
-        <option value="fiction">Ficção</option>
-        <option value="non-fiction">Não-ficção</option>
-        <option value="romance">Romance</option>
-        <option value="fantasy">Fantasia</option>
-        <option value="mystery">Mistério</option>
-        <option value="biography">Biografia</option>
-    </select>
-
-    <section id="books-container" class="books-container">
-        <!-- A lista de livros será renderizada aqui via JavaScript -->
-    </section>
-
-    <section id="modal" class="modal" style="display: none;"> <!-- Modal inicialmente oculto -->
-        <div id="modal-content" class="modal-content">
-            <h2 class="book-details-title">Título do Livro</h2>
-            <img src="url-da-imagem.jpg" alt="Título do Livro">
-            <p><strong>Autor:</strong> Autor do Livro</p>
-            <p><strong>Sinopse:</strong> Sinopse do Livro</p>
-            <button class="close-btn">Fechar</button>
-            <a href="historico.html" class="trade-btn">Quero Trocar</a> <!-- Botão Quero Trocar com href -->
+        <!-- Filtro de gêneros -->
+        <div class="form-group">
+            <label for="genre-filter">Filtro de Gêneros:</label>
+            <select id="genre-filter" class="input-icon">
+                <option value="all">Todos</option>
+                <option value="fiction">Ficção</option>
+                <option value="non-fiction">Não-ficção</option>
+                <option value="romance">Romance</option>
+                <option value="fantasy">Fantasia</option>
+                <option value="mystery">Mistério</option>
+                <option value="biography">Biografia</option>
+            </select>
         </div>
-    </section>
+
+        <section id="books-container" class="books-container">
+            <!-- A lista de livros será renderizada aqui via JavaScript -->
+        </section>
+
+        <section id="modal" class="modal" style="display: none;">
+            <!-- Modal inicialmente oculto -->
+            <div id="modal-content" class="modal-content">
+                <h2 class="book-details-title">Título do Livro</h2>
+                <img src="url-da-imagem.jpg" alt="Título do Livro">
+                <p><strong>Autor:</strong> Autor do Livro</p>
+                <p><strong>Sinopse:</strong> Sinopse do Livro</p>
+                <button class="close-btn">Fechar</button>
+                <a href="historico.html" class="trade-btn">Quero Trocar</a>
+            </div>
+        </section>
+    </main>
 
     <footer class="footer">
         <div class="footer-content">
@@ -72,7 +80,7 @@
             <form action="subscribe-newsletter.html" method="post">
                 <label for="email">Assine nossa Newsletter:</label>
                 <input type="email" id="email" name="email" placeholder="Seu e-mail" required>
-                <button type="submit">Inscrever-se</button>
+                <button type="submit" class="submit-button">Inscrever-se</button>
             </form>
 
             <p>&copy; 2024 Troca de Livros. Todos os direitos reservados.</p>
@@ -81,4 +89,5 @@
 
     <script src="../js/emAlta.js"></script>
 </body>
+
 </html>
