--- a/Codigo/Projeto/pages/login.html
+++ b/Codigo/Projeto/pages/login.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login - Livros Viajantes</title>
+    <!-- Fonte Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome para Ícones -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-pap/RSlcfKd+PZZA3JG5LMEeYGdH/VH2Zq8YF4/gpVYcY5ktttfXYg4e0P93kRLzGmljA/5S0tmQ3Slwg4Z/6w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- CSS Aprimorado -->
     <link rel="stylesheet" href="../style/Stylelogin.css">
 </head>
 
 <body>
     <div class="login-container">
-        <form>
-            <div class="form-card">
-                <img src="imagens/logo.png" alt="Logo do Livros Viajantes">
-                <label for="emailLogin">E-mail:</label>
-                <input type="email" id="emailLogin" name="emailLogin" required><br><br>
-                <label for="senhaLogin">Senha:</label>
-                <input type="password" id="senhaLogin" name="senhaLogin" required><br><br>
-                <button id="btnLogin" type="submit">Login</button>
-                <div class="signup-container">
-                    <a href="CadastroUsuarios.html">Cadastrar novo usuário</a>
+        <div class="form-card">
+            <img src="imagens/logo.png" alt="Logo do Livros Viajantes" class="logo">
+            <h1>Livros Viajantes</h1>
+            <h3>Faça login na sua conta</h3>
+            <form action="/login" method="POST" aria-label="Formulário de Login">
+                <div class="input-group">
+                    <i class="fas fa-envelope icon"></i>
+                    <input type="email" id="emailLogin" name="emailLogin" placeholder="Digite seu e-mail" required
+                        aria-required="true">
                 </div>
+                <div class="input-group">
+                    <i class="fas fa-lock icon"></i>
+                    <input type="password" id="senhaLogin" name="senhaLogin" placeholder="Digite sua senha" required
+                        aria-required="true">
+                </div>
+                <button id="btnLogin" type="submit">Entrar</button>
+            </form>
+            <div class="signup-container">
+                <a href="CadastroUsuarios.html" class="signup-link">Não tem uma conta? Cadastre-se</a>
             </div>
-        </form>
+        </div>
     </div>
     <script src="../js/login.js"></script>
 </body>
