--- a/Codigo/Projeto/pages/meus-livros.html
+++ b/Codigo/Projeto/pages/meus-livros.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,51 +11,72 @@
     <header class="header">
         <div class="header-content">
             <div class="logo-container">
-                <a href="inicio.html"><img src="img/logo.png" alt="logo" class="logo"></a>
+                <a href="inicio.html"><img src="img/logo1-removebg-preview.png" alt="logo" class="logo"></a>
             </div>
-            <!-- Botões de navegação -->
             <nav>
-                    <a href="emAlta.html"><button>Em Alta</button></a>
-                    <a href="historico.html"><button>Histórico de Troca</button></a>
-                    <a href="cadastrar-livro.html"><button>Cadastrar Livro</button></a>
-                    <a href="postagem-livros.html"><button>Livros</button></a>
-                    <button id="logout-btn">Sair</button>
-                    
-                   
+                <a href="emAlta.html"><button aria-label="Ver livros em alta">Em Alta</button></a>
+                <a href="historico.html"><button aria-label="Ver histórico de troca">Histórico de Troca</button></a>
+                <a href="cadastrar-livro.html"><button aria-label="Cadastrar um novo livro">Cadastrar Livro</button></a>
+                <a href="postagem-livros.html"><button aria-label="Ver lista de livros">Livros</button></a>
+                <button id="logout-btn" aria-label="Sair">Sair</button>
             </nav>
         </div>
     </header>
 
-    <h1>MINHA BIBLIOTECA</h1>
+    <main>
+        <h1>MINHA BIBLIOTECA</h1>
 
-    <!-- Filtro de gêneros -->
-    <select id="genre-filter">
-        <option value="all">Todos</option>
-        <option value="Ação">Ação</option>
-        <option value="Fantasia">Fantasia</option>
-        <option value="Comédia">Comédia</option>
-        <option value="Suspense">Suspense</option>
-        <option value="Terror">Terror</option>
-        <option value="Romance">Romance</option>
-        <option value="Infantil">Infantil</option>
-    </select>
+        <!-- Filtro de gêneros -->
+        <select id="genre-filter" aria-label="Filtrar por gênero">
+            <option value="all">Todos</option>
+            <option value="Ação">Ação</option>
+            <option value="Fantasia">Fantasia</option>
+            <option value="Comédia">Comédia</option>
+            <option value="Suspense">Suspense</option>
+            <option value="Terror">Terror</option>
+            <option value="Romance">Romance</option>
+            <option value="Infantil">Infantil</option>
+        </select>
 
-    <section id="my-library">
-        <!-- A lista de livros será renderizada aqui via JavaScript -->
-    </section>
-
-    <section id="book-details" class="modal">
-        <div class="modal-content book-details-content">
-            <img id="image-details" alt="Imagem do livro">
-            <div class="book-details-info">
-                <div class="book-details-description">
-                    <h2 id="book-title"></h2>
-                    <p id="book-description"></p>
-                    <button id="close-details">Fechar</button>
+        <section id="my-library" class="book-cards">
+            <!-- Exemplo de cartão de livro -->
+            <div class="book-card">
+                <img src="img/livro1.jpg" alt="Livro 1" class="book-image">
+                <div class="book-info">
+                    <h3 class="book-title">Título do Livro 1</h3>
+                    <p class="book-description">Descrição do livro 1.</p>
                 </div>
             </div>
-        </div>
-    </section>     
+            <div class="book-card">
+                <img src="img/livro2.jpg" alt="Livro 2" class="book-image">
+                <div class="book-info">
+                    <h3 class="book-title">Título do Livro 2</h3>
+                    <p class="book-description">Descrição do livro 2.</p>
+                </div>
+            </div>
+            <div class="book-card">
+                <img src="img/livro3.jpg" alt="Livro 3" class="book-image">
+                <div class="book-info">
+                    <h3 class="book-title">Título do Livro 3</h3>
+                    <p class="book-description">Descrição do livro 3.</p>
+                </div>
+            </div>
+            <!-- Adicione mais livros conforme necessário -->
+        </section>
+
+        <section id="book-details" class="modal" aria-hidden="true">
+            <div class="modal-content book-details-content">
+                <img id="image-details" alt="Imagem do livro">
+                <div class="book-details-info">
+                    <div class="book-details-description">
+                        <h2 id="book-title"></h2>
+                        <p id="book-description"></p>
+                        <button id="close-details" aria-label="Fechar detalhes do livro">Fechar</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer class="footer">
         <div class="footer-content">
@@ -85,8 +106,6 @@
             <p>&copy; 2024 Troca de Livros. Todos os direitos reservados.</p>
         </div>
     </footer>
-
-
 
     <script src="../js/script.js"></script>
 </body>
