--- a/Codigo/Projeto/pages/postagem-livros.html
+++ b/Codigo/Projeto/pages/postagem-livros.html
@@ -1,150 +1,157 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Postagem de Livros</title>
+    <!-- Fonte do Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <!-- Link para o CSS -->
     <link rel="stylesheet" href="../style/postagem.css">
 </head>
+
 <body>
+    <!-- Overlay para melhorar a legibilidade -->
+    <div class="background-overlay"></div>
+
+    <!-- Cabeçalho -->
     <header class="header">
         <div class="header-content">
             <div class="logo-container">
-                <a href="inicio.html"><img src="img/logo.png" alt="logo" class="logo"></a>
+                <a href="inicio.html"><img src="img/logo1-removebg-preview.png" alt="Logo" class="logo"></a>
             </div>
             <nav class="header-nav">
                 <a href="login.html" class="header-button">Login</a>
                 <a href="CadastroUsuarios.html" class="header-button">Cadastrar</a>
-                <a href="meus-livros.html" class="header-button">Meus Livros</a> <!-- Botão Meus Livros -->
+                <a href="meus-livros.html" class="header-button">Meus Livros</a>
                 <a href="emAlta.html" class="header-button">Em Alta</a>
-            
             </nav>
             <div class="search-container">
-                <!-- Aqui está o campo de busca e o botão "Buscar" -->
                 <input type="text" id="search-input" placeholder="Buscar livro...">
                 <button id="search-button">Buscar</button>
             </div>
         </div>
         <div class="header-buttons">
-            <!-- Aqui coloco o botão para registrar um novo livro -->
             <a href="cadastrar-livro.html" class="register-button">Registrar Novo Livro</a>
         </div>
     </header>
-    
+
+    <!-- Main Content -->
     <main>
-        <!-- Carrossel de livros de programação -->
-        <!-- Exibo livros de programação em um carrossel com botões para mover os livros para a esquerda e direita -->
-        <section id="carousel-container">
+        <!-- Carrossel de Livros por Gênero -->
+        <section class="carousel-section">
             <h2>Livros de Programação</h2>
             <div class="carousel" id="programming-carousel">
-                <button class="carousel-button prev" onclick="moveCarousel('programming', -1)">&#10094;</button>
+                <button class="carousel-button prev">&#10094;</button>
                 <div id="programming-book-list" class="carousel-items">
-                    <!-- Aqui são exibidos os livros de programação -->
+                    <!-- Livros de Programação serão inseridos aqui via JavaScript -->
                 </div>
-                <button class="carousel-button next" onclick="moveCarousel('programming', 1)">&#10095;</button>
+                <button class="carousel-button next">&#10095;</button>
             </div>
         </section>
 
-        <!-- Carrossel de livros de terror -->
-        <!-- Mesma lógica do carrossel anterior, agora para livros de terror -->
-        <section id="carousel-container">
+        <section class="carousel-section">
             <h2>Livros de Terror</h2>
             <div class="carousel" id="terror-carousel">
-                <button class="carousel-button prev" onclick="moveCarousel('terror', -1)">&#10094;</button>
+                <button class="carousel-button prev">&#10094;</button>
                 <div id="terror-book-list" class="carousel-items">
-                    <!-- Aqui são exibidos os livros de terror -->
+                    <!-- Livros de Terror serão inseridos aqui via JavaScript -->
                 </div>
-                <button class="carousel-button next" onclick="moveCarousel('terror', 1)">&#10095;</button>
+                <button class="carousel-button next">&#10095;</button>
             </div>
         </section>
 
-        <!-- Carrossel de livros de aventura -->
-        <!-- Mesma lógica do carrossel anterior, agora para livros de aventura -->
-        <section id="carousel-container">
+        <section class="carousel-section">
             <h2>Livros de Aventura</h2>
             <div class="carousel" id="aventura-carousel">
-                <button class="carousel-button prev" onclick="moveCarousel('aventura', -1)">&#10094;</button>
+                <button class="carousel-button prev">&#10094;</button>
                 <div id="aventura-book-list" class="carousel-items">
-                    <!-- Aqui são exibidos os livros de aventura -->
+                    <!-- Livros de Aventura serão inseridos aqui via JavaScript -->
                 </div>
-                <button class="carousel-button next" onclick="moveCarousel('aventura', 1)">&#10095;</button>
+                <button class="carousel-button next">&#10095;</button>
             </div>
         </section>
 
-        <!-- Carrossel de livros de fantasia -->
-        <!-- Mesma lógica do carrossel anterior, agora para livros de fantasia -->
-        <section id="carousel-container">
+        <section class="carousel-section">
             <h2>Livros de Fantasia</h2>
             <div class="carousel" id="fantasia-carousel">
-                <button class="carousel-button prev" onclick="moveCarousel('fantasia', -1)">&#10094;</button>
+                <button class="carousel-button prev">&#10094;</button>
                 <div id="fantasia-book-list" class="carousel-items">
-                    <!-- Aqui são exibidos os livros de fantasia -->
+                    <!-- Livros de Fantasia serão inseridos aqui via JavaScript -->
                 </div>
-                <button class="carousel-button next" onclick="moveCarousel('fantasia', 1)">&#10095;</button>
+                <button class="carousel-button next">&#10095;</button>
             </div>
         </section>
 
-        <!-- Carrossel de livros de romance -->
-        <!-- Mesma lógica do carrossel anterior, agora para livros de romance -->
-        <section id="carousel-container">
+        <section class="carousel-section">
             <h2>Livros de Romance</h2>
             <div class="carousel" id="romance-carousel">
-                <button class="carousel-button prev" onclick="moveCarousel('romance', -1)">&#10094;</button>
+                <button class="carousel-button prev">&#10094;</button>
                 <div id="romance-book-list" class="carousel-items">
-                    <!-- Aqui são exibidos os livros de romance -->
+                    <!-- Livros de Romance serão inseridos aqui via JavaScript -->
                 </div>
-                <button class="carousel-button next" onclick="moveCarousel('romance', 1)">&#10095;</button>
+                <button class="carousel-button next">&#10095;</button>
             </div>
         </section>
 
-        <!-- Carrossel de livros de ficção -->
-        <!-- Mesma lógica do carrossel anterior, agora para livros de ficção -->
-        <section id="carousel-container">
+        <section class="carousel-section">
             <h2>Livros de Ficção</h2>
             <div class="carousel" id="ficcao-carousel">
-                <button class="carousel-button prev" onclick="moveCarousel('ficcao', -1)">&#10094;</button>
+                <button class="carousel-button prev">&#10094;</button>
                 <div id="ficcao-book-list" class="carousel-items">
-                    <!-- Aqui são exibidos os livros de ficção -->
+                    <!-- Livros de Ficção serão inseridos aqui via JavaScript -->
                 </div>
-                <button class="carousel-button next" onclick="moveCarousel('ficcao', 1)">&#10095;</button>
+                <button class="carousel-button next">&#10095;</button>
             </div>
         </section>
     </main>
 
+    <!-- Modal para Detalhes do Livro -->
+    <section id="modal" class="modal" style="display: none;">
+        <div class="modal-content">
+            <button class="close-btn">&times;</button>
+            <h2 class="book-details-title">Título do Livro</h2>
+            <img src="url-da-imagem.jpg" alt="Título do Livro" class="modal-book-image">
+            <p><strong>Autor:</strong> Autor do Livro</p>
+            <p><strong>Sinopse:</strong> Sinopse do Livro</p>
+            <a href="historico.html" class="trade-btn">Quero Trocar</a>
+        </div>
+    </section>
+
+    <!-- Rodapé -->
     <footer class="footer">
         <div class="footer-content">
-            <!-- Exibo informações de contato -->
             <p><strong>Contato:</strong></p>
             <p>Email: contato@livrosviajantes.com</p>
             <p>Telefone: (31) 3131-2800</p>
             <p>Endereço: PUC Minas, Rua Cláudio Manoel, 1162</p>
 
-            <!-- Exibo links importantes no rodapé -->
-            <nav>
+            <nav class="footer-nav">
                 <a href="cadastrar-livro.html">Cadastrar Livro</a> |
                 <a href="privacy-policy.html">Política de Privacidade</a> |
                 <a href="terms.html">Termos de Uso</a>
             </nav>
 
-            <!-- Exibo links das redes sociais -->
             <p>Siga-nos:</p>
-            <a href="https://facebook.com" target="_blank">Facebook</a> |
-            <a href="https://twitter.com" target="_blank">Twitter</a> |
-            <a href="https://instagram.com" target="_blank">Instagram</a>
+            <div class="social-links">
+                <a href="https://facebook.com" target="_blank">Facebook</a> |
+                <a href="https://twitter.com" target="_blank">Twitter</a> |
+                <a href="https://instagram.com" target="_blank">Instagram</a>
+            </div>
 
-            <!-- Formulário para assinar a newsletter -->
-            <form action="subscribe-newsletter.html" method="post">
+            <form action="subscribe-newsletter.html" method="post" class="newsletter-form">
                 <label for="email">Assine nossa Newsletter:</label>
                 <input type="email" id="email" name="email" placeholder="Seu e-mail" required>
-                <button type="submit">Inscrever-se</button>
+                <button type="submit" class="submit-button">Inscrever-se</button>
             </form>
 
-            <!-- Exibo direitos autorais no rodapé -->
             <p>&copy; 2024 Livros Viajantes. Todos os direitos reservados.</p>
         </div>
     </footer>
 
-    <!-- Importo o script JavaScript para fazer o carrossel e outras funcionalidades funcionarem -->
+    <!-- Script JavaScript -->
     <script src="../js/postagem.js"></script>
 </body>
+
 </html>
