--- a/Codigo/Projeto/src/main/resources/Projeto/pages/cadastrar-livro.html
+++ b/Codigo/Projeto/src/main/resources/Projeto/pages/cadastrar-livro.html
@@ -33,10 +33,18 @@
         <div class="form-container">
             <form id="book-form">
                 <div class="form-group">
-                    <label for="book-name">Nome:</label>
+                    <label for="book-name">Título:</label>
                     <div class="input-icon">
                         <i class="fas fa-book icon"></i>
                         <input type="text" id="book-name" name="book-name" placeholder="Digite o nome do livro" required>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="book-author">Autor(a):</label>
+                    <div class="input-icon">
+                        <i class="fas fa-user icon"></i>
+                        <input type="text" id="book-author" name="book-author" placeholder="Digite o nome do autor" required>
                     </div>
                 </div>
 
@@ -62,19 +70,11 @@
                     <textarea id="book-synopsis" name="book-synopsis" placeholder="Digite a sinopse do livro" required></textarea>
                 </div>
 
-                <div class="form-group">
+                <!--<div class="form-group">
                     <label for="book-pages">Número de páginas:</label>
                     <div class="input-icon">
                         <i class="fas fa-file-alt icon"></i>
                         <input type="number" id="book-pages" name="book-pages" placeholder="Ex: 350" required>
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <label for="book-author">Autor(a):</label>
-                    <div class="input-icon">
-                        <i class="fas fa-user icon"></i>
-                        <input type="text" id="book-author" name="book-author" placeholder="Digite o nome do autor" required>
                     </div>
                 </div>
 
@@ -92,7 +92,7 @@
                         <i class="fas fa-upload icon"></i>
                         <input type="file" id="book-image" name="book-image">
                     </div>
-                </div>
+                </div>-->
 
                 <button type="submit" class="submit-button">Cadastrar Livro</button>
             </form>
