--- a/Codigo/Projeto/src/main/resources/Projeto/pages/login.html
+++ b/Codigo/Projeto/src/main/resources/Projeto/pages/login.html
@@ -7,6 +7,8 @@
     <title>Login - Livros Viajantes</title>
     <!-- Fonte Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
     <!-- Font Awesome para Ícones -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-pap/RSlcfKd+PZZA3JG5LMEeYGdH/VH2Zq8YF4/gpVYcY5ktttfXYg4e0P93kRLzGmljA/5S0tmQ3Slwg4Z/6w=="
@@ -24,12 +26,14 @@
             <form action="/login" method="POST" aria-label="Formulário de Login">
                 <div class="input-group">
                     <i class="fas fa-envelope icon"></i>
-                    <input type="email" id="emailLogin" name="emailLogin" placeholder="Digite seu e-mail" required
+                    <input type="email" id="emailLogin" name="emailLogin"
+                    autocomplete="email" placeholder="Digite seu e-mail" required
                         aria-required="true">
                 </div>
                 <div class="input-group">
                     <i class="fas fa-lock icon"></i>
-                    <input type="password" id="senhaLogin" name="senhaLogin" placeholder="Digite sua senha" required
+                    <input type="password" id="senhaLogin" name="senhaLogin"
+                    autocomplete="current-password" placeholder="Digite sua senha" required
                         aria-required="true">
                 </div>
                 <button id="btnLogin" type="submit">Entrar</button>
