--- a/Codigo/Projeto/src/main/resources/Projeto/pages/CadastroUsuarios.html
+++ b/Codigo/Projeto/src/main/resources/Projeto/pages/CadastroUsuarios.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/StyleCadastroUsuarios.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Cadastro de Usuário</title>
+    <script src="../js/CadastroUsuarios.js" defer></script> <!-- Move o script aqui -->
 </head>
 
 <body>
@@ -16,7 +16,7 @@
                 <img src="imagens/logo.png" alt="Logo">
             </div>
             <nav class="header-nav">
-                <a href="#" class="header-button">Início</a>
+                <a href="inicio.html" class="header-button">Início</a>
                 <a href="#" class="header-button">Sobre</a>
                 <a href="#" class="header-button">Contato</a>
             </nav>
@@ -26,7 +26,7 @@
     <main>
         <h1>Cadastro de Usuário</h1>
         <div class="form-container">
-            <form id="cadastroUsuario" method="post">
+            <form id="cadastroUsuario" method="post" action="/cadastrarUsuario">
                 <div class="form-group input-icon">
                     <label for="nome">Nome Completo</label>
                     <span class="icon">&#128100;</span>
@@ -48,9 +48,9 @@
                     <input type="tel" id="telefone" name="telefone" autocomplete="tel" placeholder="(00) 00000-0000" required>
                 </div>
                 <div class="form-group input-icon">
-                    <label for="endereco">Rua</label>
+                    <label for="rua">Rua</label>
                     <span class="icon">&#127968;</span>
-                    <input type="text" id="endereco" name="endereco" autocomplete="address-line1" placeholder="Rua, Número" required>
+                    <input type="text" id="rua" name="rua" autocomplete="address-line1" placeholder="Rua, Número" required>
                 </div>
                 <div class="form-group input-icon">
                     <label for="cidade">Cidade</label>
@@ -62,33 +62,33 @@
                     <span class="icon">&#127968;</span>
                     <select id="estado" name="estado" autocomplete="address-level3" required>
                         <option value="" disabled selected>Selecione o estado</option>
-                        <option value="AC">Acre</option>
-                        <option value="AL">Alagoas</option>
-                        <option value="AP">Amapá</option>
-                        <option value="AM">Amazonas</option>
-                        <option value="BA">Bahia</option>
-                        <option value="CE">Ceará</option>
-                        <option value="DF">Distrito Federal</option>
-                        <option value="ES">Espírito Santo</option>
-                        <option value="GO">Goiás</option>
-                        <option value="MA">Maranhão</option>
-                        <option value="MT">Mato Grosso</option>
-                        <option value="MS">Mato Grosso do Sul</option>
-                        <option value="MG">Minas Gerais</option>
-                        <option value="PA">Pará</option>
-                        <option value="PB">Paraíba</option>
-                        <option value="PR">Paraná</option>
-                        <option value="PE">Pernambuco</option>
-                        <option value="PI">Piauí</option>
-                        <option value="RJ">Rio de Janeiro</option>
-                        <option value="RN">Rio Grande do Norte</option>
-                        <option value="RS">Rio Grande do Sul</option>
-                        <option value="RO">Rondônia</option>
-                        <option value="RR">Roraima</option>
-                        <option value="SC">Santa Catarina</option>
-                        <option value="SP">São Paulo</option>
-                        <option value="SE">Sergipe</option>
-                        <option value="TO">Tocantins</option>
+                        <option value="AC">AC</option>
+                        <option value="AL">AL</option>
+                        <option value="AP">AP</option>
+                        <option value="AM">AM</option>
+                        <option value="BA">BA</option>
+                        <option value="CE">CE</option>
+                        <option value="DF">DF</option>
+                        <option value="ES">ES</option>
+                        <option value="GO">GO</option>
+                        <option value="MA">MA</option>
+                        <option value="MT">MT</option>
+                        <option value="MS">MS</option>
+                        <option value="MG">MG</option>
+                        <option value="PA">PA</option>
+                        <option value="PB">PB</option>
+                        <option value="PR">PR</option>
+                        <option value="PE">PE</option>
+                        <option value="PI">PI</option>
+                        <option value="RJ">RJ</option>
+                        <option value="RN">RN</option>
+                        <option value="RS">RS</option>
+                        <option value="RO">RO</option>
+                        <option value="RR">RR</option>
+                        <option value="SC">SC</option>
+                        <option value="SP">SP</option>
+                        <option value="SE">SE</option>
+                        <option value="TO">TO</option>
                     </select>
                 </div>
                 <div class="form-group input-icon">
@@ -96,7 +96,7 @@
                     <span class="icon">&#128205;</span>
                     <input type="text" id="cep" name="cep" autocomplete="postal-code" placeholder="00000-000" required>
                 </div>
-                <button type="submit" class="submit-button">Cadastrar Usuário</button>
+                <button type="submit" class="submit-button" onclick="cadastrarUsuario(event)">Cadastrar Usuário</button>
             </form>
         </div>
     </main>
@@ -105,5 +105,4 @@
         <p>&copy; 2024 Livros Viajantes. Todos os direitos reservados.</p>
     </footer>
 </body>
-
 </html>
