--- a/Codigo/Projeto/src/main/resources/Projeto/pages/comofunciona.html
+++ b/Codigo/Projeto/src/main/resources/Projeto/pages/comofunciona.html
@@ -13,23 +13,25 @@
 <body>
 
     <!-- Cabeçalho -->
-    <header>
-        <div class="header-container">
+    <header class="header">
+        <div class="header-content">
             <div class="logo-container">
                 <a href="inicio.html"><img src="img/logo1-removebg-preview.png" alt="logo" class="logo"></a>
             </div>
             <nav class="header-nav">
-                <a href="comofunciona.html" class="header-button1">Como Funciona</a>
-                <a href="login.html" class="header-button2">Login</a>
-                <a href="CadastroUsuarios.html" class="header-button3">Cadastrar</a>
-                <a href="postagem-livros.html" class="header-button4">Catálogo de Livros</a>
-                <a href="login.html" class="header-button5">Troque Agora</a>
+                <a href="login.html" class="header-button">Login</a>
+                <a href="CadastroUsuarios.html" class="header-button">Cadastrar</a>
+                <a href="postagem-livros.html" class="header-button">Catálogo de Livros</a>
+                <a href="login.html" class="header-button">Troque Agora</a>
             </nav>
-            <section id="banner" class="banner">
-                <h1 class="header-title">Como Funciona</h1>
-                <p>Descubra como você pode trocar seus livros favoritos e viajar pelo mundo literário.</p>
-            </section>
         </div>
+    </header>
+
+    <section id="banner" class="banner">
+        <h1 class="header-title">Como Funciona</h1>
+        <p>Descubra como você pode trocar seus livros favoritos e viajar pelo mundo literário.</p>
+    </section>
+    </div>
     </header>
 
     <!-- Seção de Explicação -->
@@ -68,7 +70,6 @@
     <!-- Rodapé -->
     <footer>
         <p>&copy; 2024 Livros Viajantes. Todos os direitos reservados.</p>
-        <p>Conecte-se nas redes sociais: Facebook | Instagram | Twitter</p>
     </footer>
 
 </body>
