--- a/Codigo/Projeto/src/main/resources/Projeto/pages/meus-livros.html
+++ b/Codigo/Projeto/src/main/resources/Projeto/pages/meus-livros.html
@@ -103,7 +103,7 @@
                 <button type="submit">Inscrever-se</button>
             </form>
 
-            <p>&copy; 2024 Troca de Livros. Todos os direitos reservados.</p>
+            <p>&copy; 2024 Livros Viajantes. Todos os direitos reservados.</p>
         </div>
     </footer>
 
