--- a/Codigo/Projeto/src/main/resources/Projeto/pages/cadastrar-livro.html
+++ b/Codigo/Projeto/src/main/resources/Projeto/pages/cadastrar-livro.html
@@ -7,10 +7,7 @@
     <!-- Fonte Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Font Awesome para Ícones -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-pap/RSlcfKd+PZZA3JG5LMEeYGdH/VH2Zq8YF4/gpVYcY5ktttfXYg4e0P93kRLzGmljA/5S0tmQ3Slwg4Z/6w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- CSS Aprimorado -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Cadastrar Livro</title>
     <link rel="stylesheet" href="../style/cadastrar-livros.css">
 </head>
@@ -36,7 +33,8 @@
                     <label for="book-name">Título:</label>
                     <div class="input-icon">
                         <i class="fas fa-book icon"></i>
-                        <input type="text" id="book-name" name="book-name" placeholder="Digite o nome do livro" required>
+                        <input type="text" id="book-name" name="nome" autocomplete="off"
+                            placeholder="Digite o título do livro" required>
                     </div>
                 </div>
 
@@ -44,7 +42,8 @@
                     <label for="book-author">Autor(a):</label>
                     <div class="input-icon">
                         <i class="fas fa-user icon"></i>
-                        <input type="text" id="book-author" name="book-author" placeholder="Digite o nome do autor" required>
+                        <input type="text" id="book-author" name="autor" autocomplete="off"
+                            placeholder="Digite o nome do autor" required>
                     </div>
                 </div>
 
@@ -52,7 +51,7 @@
                     <label for="book-genre">Gênero:</label>
                     <div class="input-icon">
                         <i class="fas fa-tags icon"></i>
-                        <select id="book-genre" name="book-genre" required>
+                        <select id="book-genre" name="genero" autocomplete="off" required>
                             <option value="">Selecione o gênero</option>
                             <option value="terror">Terror</option>
                             <option value="suspense">Suspense</option>
@@ -67,7 +66,8 @@
 
                 <div class="form-group">
                     <label for="book-synopsis">Sinopse:</label>
-                    <textarea id="book-synopsis" name="book-synopsis" placeholder="Digite a sinopse do livro" required></textarea>
+                    <textarea id="book-synopsis" name="sinopse" autocomplete="off"
+                        placeholder="Digite a sinopse do livro" required></textarea>
                 </div>
 
                 <!--<div class="form-group">
@@ -101,29 +101,6 @@
 
     <footer class="footer">
         <div class="footer-content">
-            <p><strong>Contato:</strong></p>
-            <p>Email: contato@livrosviajantes.com</p>
-            <p>Telefone: (31) 3131-2800</p>
-            <p>Endereço: PUC Minas, Rua Cláudio Manoel, 1162</p>
-
-            <nav>
-                <a href="cadastrar-livro.html">Cadastrar Livro</a> |
-                <a href="login.html">Login</a> |
-                <a href="privacy-policy.html">Política de Privacidade</a> |
-                <a href="terms.html">Termos de Uso</a>
-            </nav>
-
-            <p>Siga-nos:</p>
-            <a href="https://facebook.com" target="_blank">Facebook</a> |
-            <a href="https://twitter.com" target="_blank">Twitter</a> |
-            <a href="https://instagram.com" target="_blank">Instagram</a>
-
-            <form action="subscribe-newsletter.html" method="post">
-                <label for="email">Assine nossa Newsletter:</label>
-                <input type="email" id="email" name="email" placeholder="Seu e-mail" required>
-                <button type="submit">Inscrever-se</button>
-            </form>
-
             <p>&copy; 2024 Livros Viajantes. Todos os direitos reservados.</p>
         </div>
     </footer>
