--- a/Codigo/Projeto/src/main/resources/Projeto/pages/emAlta.html
+++ b/Codigo/Projeto/src/main/resources/Projeto/pages/emAlta.html
@@ -83,7 +83,7 @@
                 <button type="submit" class="submit-button">Inscrever-se</button>
             </form>
 
-            <p>&copy; 2024 Troca de Livros. Todos os direitos reservados.</p>
+            <p>&copy; 2024 Livros Viajantes. Todos os direitos reservados.</p>
         </div>
     </footer>
 
