--- a/Codigo/Projeto/src/main/resources/Projeto/pages/inicio.html
+++ b/Codigo/Projeto/src/main/resources/Projeto/pages/inicio.html
@@ -20,11 +20,16 @@
             </div>
             <nav class="header-nav">
                 <a href="comofunciona.html" class="header-button">Como Funciona</a>
-                <a href="login.html" class="header-button">Login</a>
+              <!--  <a href="login.html" class="header-button">Login</a> -->
                 <a href="CadastroUsuarios.html" class="header-button">Cadastrar</a>
                 <a href="postagem-livros.html" class="header-button">Catálogo de Livros</a>
-                <a href="login.html" class="header-button">Troque Agora</a>
+                <a href="historico.html" class="header-button">Troque Agora</a>
+                <a href="cadastrar-livro.html" class="register-button">Registrar Novo Livro</a>
             </nav>
+            <div class="search-container">
+                <input type="text" id="search-input" placeholder="Buscar livro...">
+                <button id="search-button">Buscar</button>
+            </div>
         </div>
     </header>
 
@@ -53,6 +58,7 @@
             <p><strong>Autor:</strong> Autor do Livro</p>
             <p><strong>Sinopse:</strong> Sinopse do Livro</p>
             <a href="historico.html" class="trade-btn">Quero Trocar</a>
+            <button class="add-to-list-btn">Adicionar à Lista</button> <!-- Botão Adicionar à Lista -->
         </div>
     </section>
 
