--- a/Codigo/Projeto/src/main/resources/Projeto/pages/cadastrar-livro.html
+++ b/Codigo/Projeto/src/main/resources/Projeto/pages/cadastrar-livro.html
@@ -16,12 +16,19 @@
     <header class="header">
         <div class="header-content">
             <div class="logo-container">
-                <img src="img/logo1-removebg-preview.png" alt="Logo" class="logo">
+                <a href="inicio.html"><img src="img/logo1-removebg-preview.png" alt="Logo" class="logo"></a>
             </div>
             <nav class="header-nav">
                 <a href="login.html" class="header-button">Login</a>
-                <a href="postagem-livros.html" class="header-button">Postagem de Livros</a>
+                <a href="comofunciona.html" class="header-button">Como Funciona</a>
+                <a href="postagem-livros.html" class="header-button">Catálogo de Livros</a>
+                <a href="historico.html" class="header-button">Troque Agora</a>
+                <a href="emAlta.html" class="header-button">Em Alta</a>
             </nav>
+            <div class="search-container">
+                <input type="text" id="search-input" placeholder="Buscar livro...">
+                <button id="search-button">Buscar</button>
+            </div>
         </div>
     </header>
 
